<resources>
    <string name="app_name">milico</string>
    <string name="tv_ok">ok</string>
    <string name="err_no_data_available">No data available</string>
    <string name="err_no_internet">No Internet</string>
    <string name="err_connection_time_out">Time Out</string>
    <string name="err_something_went_wrong">Something went wrong</string>
    <string name="err_invalid_bsb">Invalid</string>
    <string name="todo">TODO</string>


    <!--keypad number-->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>


    <!--fonts-->
    <string name="font_regulat">fonts/Metropolis-Regular.otf</string>
    <string name="font_bold">fonts/Metropolis-Bold.otf</string>
    <string name="font_extrabold">fonts/Metropolis-ExtraBold.otf</string>
    <string name="font_extralight">fonts/Metropolis-ExtraLight.otf</string>
    <string name="font_medium">fonts/Metropolis-Medium.otf</string>
    <string name="font_light">fonts/Metropolis-Light.otf</string>
    <string name="font_thin">fonts/Metropolis-Thin.otf</string>
    <string name="welcome_to_home_screen">WELCOME TO HOME SCREEN</string>
    <string name="points_to_retail">Convert your cards into retail cards</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="forgotten_pin">Forgotten PIN?</string>
    <string name="tv_select_staff">Please see staff to \n reset your PIN</string>
    <string name="some_info_about_the_app_here">Some info about the app here</string>
    <string name="welcome_back">Welcome back</string>
    <string name="tv_membership_status">MEMBERSHIP STATUS: GOLD</string>
    <string name="tv_expiry_date">MEMBERSHIP EXPIRY: 12 MAY 2018</string>
    <string name="tv_email">EMAIL: B@GMAIL.COM</string>
    <string name="loyalty_value_available">Loyalty value available</string>
    <string name="loyalty_value">$171.24</string>
    <string name="points_available">171.24 points available</string>
    <string name="redeem">Reedeem Now</string>
    <string name="edit_email_address">EDIT EMAIL ADDRESS</string>
    <string name="incorrect_pin">Please enter correct pin number.</string>
    <string name="touch_card">Touch card to select</string>
    <string name="best_sellers">BEST SELLERS</string>
    <string name="price">$100</string>
    <string name="edit">EDIT</string>
    <string name="remove">REMOVE</string>
    <string name="review">Review</string>
    <string name="checkout">Checkout</string>
    <string name="redeem_more">Reedem More</string>
    <string name="retry_again">Retry</string>
    <string name="price_25">$25</string>
    <string name="price_50">$50</string>
    <string name="price_100">$100</string>
    <string name="price_200">$200</string>
    <string name="price_500">$500</string>
    <string name="price_other">$OTHER</string>
    <string name="redeem_all">Redeem All</string>
    <string name="qty">QTY</string>
    <string name="confirm">Confirm</string>
    <string name="can_be_redeemed">Can be Redeemed using your phone or print at home</string>
    <string name="note_lost_print">Note Lost Print Outs cannot be re-issued</string>
    <string name="your_card_will_emailed">Your Card Will Be Emailed To:</string>
    <string name="txt_email_card">Email Card</string>
    <string name="print_now">Print Now</string>
    <string name="email_details">Email details</string>
    <string name="update_email">Update Email</string>
    <string name="inactive_msg">You seems inactive. Your session will expire soon</string>
    <string name="your_email">Your Email: </string>
    >>>>>>> origin/dev


    <!--size of redeem screen-->
</resources>
