<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/review_background"
        android:clickable="true">

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:background="@color/review_title_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txtSize_80"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />

        <android.support.constraint.Guideline
            android:id="@+id/leftGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.27"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="452dp"
            android:background="@color/review_title_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_60"
            android:layout_marginStart="@dimen/dimen_50"
            android:layout_marginTop="100dp"
            android:background="@color/textView_background"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_10"
            app:layout_constraintEnd_toStartOf="@+id/leftGuideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/your_email"
            android:textColor="@color/textView_color"
            android:textSize="@dimen/txtSize_20"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.515" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="2dp"
            android:background="@null"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Mark@gmail.com"
            android:textColor="@color/textView_color"
            android:textSize="@dimen/txtSize_20"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/tvEmail"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <android.support.constraint.Guideline
            android:id="@+id/rightGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.54" />

        <Button
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:background="@drawable/bg_green_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.154" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6"
            app:srcCompat="@drawable/mail_icon" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm"
            android:fontFamily="@string/font_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txtSize_35"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Button
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="36dp"
            android:background="@drawable/bg_gray_button"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintStart_toEndOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6" />


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/view7"
            android:tint="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/view7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:srcCompat="@drawable/mail_icon" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_email"
            android:fontFamily="@string/font_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txtSize_35"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/view7"
            app:layout_constraintStart_toStartOf="@+id/view7"
            app:layout_constraintTop_toTopOf="@+id/textView8" />



    </android.support.constraint.ConstraintLayout>
</layout>